create page portfolio

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <!--шапка-->
     <header>
       <nav>
-        <a href="" lang="en">WebStudio</a>
+        <a href="./index.html" lang="en">WebStudio</a>
 
         <ul>
           <li><a href="">Студия</a></li>
           <li>
-            <a href="">Портфолио</a>
+            <a href="./portfolio.html">Портфолио</a>
           </li>
           <li>
             <a href="">Контакты</a>
@@ -131,9 +131,9 @@
         </ul>
       </section>
 
-      <!--команда-->
+      <!-- наша команда-->
       <section>
-        <h2>Наша команда</h2>
+        <h2 hidden>Наша команда</h2>
         <ul>
           <li>
             <img
