--- a/portfolio.html
+++ b/portfolio.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Document</title>
+    <title lang="en">WebStudio</title>
 </head>
 <body>
     
     <!-- шапка -->
     <header>
       <nav>
-        <a href="" lang="en">WebStudio</a>
+        <a href="./index.html" lang="en">WebStudio</a>
 
         <ul>
           <li><a href="">Студия</a></li>
           <li>
-            <a href="">Портфолио</a>
+            <a href="./portfolio.html">Портфолио</a>
           </li>
           <li>
             <a href="">Контакты</a>
@@ -37,6 +37,96 @@
         </li>
       </ul>
     </header>
+
+    <!-- контент -->
+    <section>
+        <ul>
+            <li>
+                <button type="button">Все</button>
+            </li>
+            <li>
+                <button type="button">Веб-сайты</button>
+            </li>
+            <li>
+                <button type="button">Приложения</button>
+            </li>
+            <li>
+                <button type="button">Дизайн</button>
+            </li>
+            <li>
+                <button type="button">Маркетинг</button>
+            </li>
+        </ul>
+
+        <h1 hidden>Портфолио</h1>
+
+        <ul>
+            <li>
+                <img src="./images/portfolio/technocrack.jpg" 
+                alt="технокряк" 
+                width="370" 
+                height="294">
+                <h2>Технокряк</h2>
+                <p>Веб-сайт</p>
+            </li>
+            <li>
+                <img src="./images/portfolio/poster.jpg" alt="постер" 
+                width="370"
+                height="294">
+                <h2>Постер New Orlean vs Golden Star</h2>
+                <p>Дизайн</p>
+            </li>
+            <li>
+                <img src="./images/portfolio/seafood.jpg" alt="ресторан"
+                width="370"
+                height="294">
+                <h2>Ресторан Seafood</h2>
+                <p>Приложение</p>
+            </li>
+            <li>
+                <img src="./images/portfolio/prime.jpg" alt="наушники" 
+                width="370"
+                height="294">
+                <h2>Проект Prime</h2>
+                <p>Маркетинг</p>
+            </li>
+            <li>
+                <img src="./images/portfolio/boxes.jpg" alt="коробки"
+                width="370"
+                height="294">
+                <h2>Проект Boxes</h2>
+                <p>Приложение</p>
+            </li>
+            <li>
+                <img src="./images/portfolio/inspiration.jpg" alt="монитор"
+                width="370"
+                height="294">
+                <h2>Inspiration has no Borders</h2>
+                <p>Веб-сайт</p>
+            </li>
+            <li>
+                <img src="./images/portfolio/limited.jpg" alt="книга"
+                width="370"
+                height="294">
+                <h2>Издание Limited Edition</h2>
+                <p>Дизайн</p>
+            </li>
+            <li>
+                <img src="./images/portfolio/lab.jpg" alt="бирка" 
+                width="370"
+                height="294">
+                <h2>Проект LAB</h2>
+                <p>Маркетинг</p>
+            </li>
+            <li>
+                <img src="./images/portfolio/growing.jpg" alt="ноутбук" 
+                width="370"
+                height="294">
+                <h2>Growing Business</h2>
+                <p>Приложение</p>
+            </li>
+        </ul>                    
+    </section>
 
 
     <!-- футер -->
