--- a/index.html
+++ b/index.html
@@ -2,43 +2,40 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      http-equiv="X-UA-Compatible"
-      content="IE=edge"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title lang="en">WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
   </head>
 
   <body>
     <!--шапка-->
-    <header>
-      <nav>
-        <a href="./index.html" lang="en">WebStudio</a>
+    <header class="page-header">
+      <nav class="page-nav">
+        <a class="logo link" href="./index.html" lang="en">Web<span class="logo-header">Studio</span></a>
 
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li>
-            <a href="./portfolio.html">Портфолио</a>
+        <ul class="menu list">
+          <li class="menu-item"><a class="menu-link link" href="">Студия</a></li>
+          <li class="menu-item">
+            <a class="menu-link link" href="./portfolio.html">Портфолио</a>
           </li>
-          <li>
-            <a href="">Контакты</a>
+          <li class="menu-item">
+            <a class="menu-link link" href="">Контакты</a>
           </li>
         </ul>
       </nav>
 
-      <ul>
+      <ul class="list">
         <li>
-          <a
+          <a class="mail link"
             href="mailto:info@devstudio.com"
             >info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111"
+          <a class="phone-number link" href="tel:+380961111111"
             >+38 096 111 11 11</a>
         </li>
       </ul>
@@ -46,20 +43,20 @@
 
     <main>
       <!--кнопка-->
-      <section>
-        <h1>
+      <section class="header-main">
+        <h1 class="header-title">
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button type="button">
+        <button class="modal-btn" type="button">
           Заказать услугу
         </button>
       </section>
 
       <!--чим займаємось-->
       <section>
-        <h2>наші переваги</h2>
-        <ul>
+        <h2 hidden>наші переваги</h2>
+        <ul class="list">
           <li>
             <h3>Внимание к деталям</h3>
             <p>
@@ -103,7 +100,7 @@
 
       <section>
         <h2>Чем мы занимаемся</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/what-do/keyboard.jpg"
@@ -133,8 +130,8 @@
 
       <!-- наша команда-->
       <section>
-        <h2 hidden>Наша команда</h2>
-        <ul>
+        <h2>Наша команда</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/employees/img_1.jpg"
@@ -184,11 +181,11 @@
 
     <!--футер-->
     <footer>
-      <a href="" lang="en">WebStudio</a>
+      <a class="link logo" href="./index.html" lang="en">Web<span class="logo-footer">Studio</span></a>
       <address>
-        <ul>
+        <ul class="list">
           <li>
-            <a
+            <a class="street-address link"
               href="https://goo.gl/maps/wQYxwLy2fmPHbs7g9"
               target="_blank"
               rel="noreferrer noopener"
@@ -196,12 +193,12 @@
               Украинки, 26</a>
           </li>
           <li>
-            <a
+            <a class="mail link"
               href="mailto:info@example.com"
               >info@example.com></a>
           </li>
           <li>
-            <a href="tel:+380991111111"
+            <a class="phone-number link" href="tel:+380991111111"
               >+38 099 111 11 11</a>
           </li>
         </ul>
