--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <!--шапка-->
+    <!--header-->
     <header class="page-header">
       <nav class="page-nav">
         <a class="logo link" href="./index.html" lang="en">Web<span class="logo-header">Studio</span></a>
@@ -30,21 +30,21 @@
 
       <ul class="list">
         <li>
-          <a class="mail link"
+          <a class="mail contacts-theme-light link"
             href="mailto:info@devstudio.com"
             >info@devstudio.com</a>
         </li>
         <li>
-          <a class="phone-number link" href="tel:+380961111111"
+          <a class="phone-number contacts-theme-light link" href="tel:+380961111111"
             >+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
 
     <main>
-      <!--кнопка-->
-      <section class="header-main">
-        <h1 class="header-title">
+      <!--hero-->
+      <section class="hero">
+        <h1 class="hero-title">
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
@@ -53,13 +53,13 @@
         </button>
       </section>
 
-      <!--чим займаємось-->
-      <section>
+      <!--content-->
+      <section class="content">
         <h2 hidden>наші переваги</h2>
         <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="content-title">Внимание к деталям</h3>
+            <p class="content-text">
               Идейные соображения, а
               также начало повседневной
               работы по формированию
@@ -67,8 +67,8 @@
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="cotent-title">Пунктуальность</h3>
+            <p class="content-text">
               Задача организации, в
               особенности же рамки и
               место обучения кадров
@@ -76,8 +76,8 @@
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="cotent-title">Планирование</h3>
+            <p class="content-text">
               Равным образом
               консультация с широким
               активом в значительной
@@ -85,10 +85,10 @@
             </p>
           </li>
           <li>
-            <h3>
+            <h3 class="cotent-title">
               Современные технологии
             </h3>
-            <p>
+            <p class="content-text">
               Значимость этих проблем
               настолько очевидна, что
               реализация плановых
@@ -98,8 +98,8 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Чем мы занимаемся</h2>
+      <section class="img-box">
+        <h2 class="section-heading">Чем мы занимаемся</h2>
         <ul class="list">
           <li>
             <img
@@ -128,10 +128,10 @@
         </ul>
       </section>
 
-      <!-- наша команда-->
-      <section>
-        <h2>Наша команда</h2>
-        <ul class="list">
+      <!--team-->
+      <section class="team">
+        <h2 class="section-heading">Наша команда</h2>
+        <ul class="team-name list">
           <li>
             <img
               src="./images/employees/img_1.jpg"
@@ -139,8 +139,8 @@
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">
+            <h3 class="team-name-title">Игорь Демьяненко</h3>
+            <p class="team-name-text" lang="en">
               Product Designer
             </p>
           </li>
@@ -151,8 +151,8 @@
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
-            <p lang="en">
+            <h3 class="team-name-title">Ольга Репина</h3>
+            <p class="team-name-text" lang="en">
               Frontend Developer
             </p>
           </li>
@@ -163,8 +163,8 @@
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="team-name-title">Николай Тарасов</h3>
+            <p class="team-name-text" lang="en">Marketing</p>
           </li>
           <li>
             <img
@@ -172,15 +172,15 @@
               alt="Михаил Ермаков"
               width="270"
             />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="team-name-title">Михаил Ермаков</h3>
+            <p class="team-name-text" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <!--футер-->
-    <footer>
+    <!--footer-->
+    <footer class="footer">
       <a class="link logo" href="./index.html" lang="en">Web<span class="logo-footer">Studio</span></a>
       <address>
         <ul class="list">
@@ -193,12 +193,12 @@
               Украинки, 26</a>
           </li>
           <li>
-            <a class="mail link"
+            <a class="mail contacts-theme-dark link"
               href="mailto:info@example.com"
               >info@example.com></a>
           </li>
           <li>
-            <a class="phone-number link" href="tel:+380991111111"
+            <a class="phone-number contacts-theme-dark link" href="tel:+380991111111"
               >+38 099 111 11 11</a>
           </li>
         </ul>
