--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <!-- шапка -->
+    <!-- header -->
     <header class="page-header">
       <nav class="page-nav">
         <a class="link logo" href="./index.html" lang="en">Web<span class="logo-header">Studio</span></a>
@@ -30,34 +30,34 @@
 
       <ul class="list">
         <li>
-          <a class="mail link"
+          <a class="mail contacts-theme-light link"
             href="mailto:info@devstudio.com"
             >info@devstudio.com</a>
         </li>
         <li>
-          <a class="phone-number link" href="tel:+380961111111"
+          <a class="phone-number contacts-theme-light link" href="tel:+380961111111"
             >+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
 
-    <!-- контент -->
-    <section>
+    <!-- content portfolio-->
+    <section class="portfolio">
         <ul class="list">
             <li>
-                <button type="button">Все</button>
+                <button class="portfolio-btn" type="button">Все</button>
             </li>
             <li>
-                <button type="button">Веб-сайты</button>
+                <button class="portfolio-btn" type="button">Веб-сайты</button>
             </li>
             <li>
-                <button type="button">Приложения</button>
+                <button class="portfolio-btn" type="button">Приложения</button>
             </li>
             <li>
-                <button type="button">Дизайн</button>
+                <button class="portfolio-btn" type="button">Дизайн</button>
             </li>
             <li>
-                <button type="button">Маркетинг</button>
+                <button class="portfolio-btn" type="button">Маркетинг</button>
             </li>
         </ul>
 
@@ -69,71 +69,71 @@
                 alt="технокряк" 
                 width="370" 
                 height="294">
-                <h2>Технокряк</h2>
-                <p>Веб-сайт</p>
+                <h2 class="portfolio-title" >Технокряк</h2>
+                <p class="portfolio-text">Веб-сайт</p>
             </li>
             <li>
                 <img src="./images/portfolio/poster.jpg" alt="постер" 
                 width="370"
                 height="294">
-                <h2>Постер <span lang="en">New Orlean vs Golden Star</span> </h2>
-                <p>Дизайн</p>
+                <h2 class="portfolio-title" >Постер <span lang="en">New Orlean vs Golden Star</span> </h2>
+                <p class="portfolio-text">Дизайн</p>
             </li>
             <li>
                 <img src="./images/portfolio/seafood.jpg" alt="ресторан"
                 width="370"
                 height="294">
-                <h2>Ресторан <span lang="en">Seafood</span></h2>
-                <p>Приложение</p>
+                <h2 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
+                <p class="portfolio-text">Приложение</p>
             </li>
             <li>
                 <img src="./images/portfolio/prime.jpg" alt="наушники" 
                 width="370"
                 height="294">
-                <h2>Проект <span lang="en">Prime</span></h2>
-                <p>Маркетинг</p>
+                <h2 class="portfolio-title" >Проект <span lang="en">Prime</span></h2>
+                <p class="portfolio-text">Маркетинг</p>
             </li>
             <li>
                 <img src="./images/portfolio/boxes.jpg" alt="коробки"
                 width="370"
                 height="294">
-                <h2>Проект <span lang="en">Boxes</span></h2>
-                <p>Приложение</p>
+                <h2 class="portfolio-title" >Проект <span lang="en">Boxes</span></h2>
+                <p class="portfolio-text">Приложение</p>
             </li>
             <li>
                 <img src="./images/portfolio/inspiration.jpg" alt="монитор"
                 width="370"
                 height="294">
-                <h2 lang="en">Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
+                <h2 class="portfolio-title"  lang="en">Inspiration has no Borders</h2>
+                <p class="portfolio-text">Веб-сайт</p>
             </li>
             <li>
                 <img src="./images/portfolio/limited.jpg" alt="книга"
                 width="370"
                 height="294">
-                <h2>Издание <span lang="en">Limited Edition</span></h2>
-                <p>Дизайн</p>
+                <h2 class="portfolio-title" >Издание <span lang="en">Limited Edition</span></h2>
+                <p class="portfolio-text">Дизайн</p>
             </li>
             <li>
                 <img src="./images/portfolio/lab.jpg" alt="бирка" 
                 width="370"
                 height="294">
-                <h2>Проект <span lang="en">LAB</span></h2>
-                <p>Маркетинг</p>
+                <h2 class="portfolio-title" >Проект <span lang="en">LAB</span></h2>
+                <p class="portfolio-text">Маркетинг</p>
             </li>
             <li>
                 <img src="./images/portfolio/growing.jpg" alt="ноутбук" 
                 width="370"
                 height="294">
-                <h2 lang="en">Growing Business</h2>
-                <p>Приложение</p>
+                <h2 class="portfolio-title"  lang="en">Growing Business</h2>
+                <p class="portfolio-text">Приложение</p>
             </li>
         </ul>                    
     </section>
 
 
-    <!-- футер -->
-    <footer>
+    <!-- footer -->
+   <footer class="footer">
       <a class="link logo" href="./index.html" lang="en">Web<span class="logo-footer">Studio</span></a>
       <address>
         <ul class="list">
@@ -146,12 +146,12 @@
               Украинки, 26</a>
           </li>
           <li>
-            <a class="mail link"
+            <a class="mail contacts-theme-dark link"
               href="mailto:info@example.com"
               >info@example.com></a>
           </li>
           <li>
-            <a class="phone-number link" href="tel:+380991111111"
+            <a class="phone-number contacts-theme-dark link" href="tel:+380991111111"
               >+38 099 111 11 11</a>
           </li>
         </ul>
