--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </p>
           </li>
           <li>
-            <h3 class="cotent-title">Пунктуальность</h3>
+            <h3 class="content-title">Пунктуальность</h3>
             <p class="content-text">
               Задача организации, в
               особенности же рамки и
@@ -76,7 +76,7 @@
             </p>
           </li>
           <li>
-            <h3 class="cotent-title">Планирование</h3>
+            <h3 class="content-title">Планирование</h3>
             <p class="content-text">
               Равным образом
               консультация с широким
@@ -85,7 +85,7 @@
             </p>
           </li>
           <li>
-            <h3 class="cotent-title">
+            <h3 class="content-title">
               Современные технологии
             </h3>
             <p class="content-text">
@@ -183,7 +183,7 @@
     <footer class="footer">
       <a class="link logo" href="./index.html" lang="en">Web<span class="logo-footer">Studio</span></a>
       <address>
-        <ul class="list">
+        <ul class="list addres-list">
           <li>
             <a class="street-address link"
               href="https://goo.gl/maps/wQYxwLy2fmPHbs7g9"
