--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,9 @@
     </header>
 
     <!-- content portfolio-->
+    <main>
     <section class="portfolio">
+      <h1 hidden>Портфолио</h1>
         <ul class="list">
             <li>
                 <button class="portfolio-btn" type="button">Все</button>
@@ -60,8 +62,6 @@
                 <button class="portfolio-btn" type="button">Маркетинг</button>
             </li>
         </ul>
-
-        <h1 hidden>Портфолио</h1>
 
         <ul class="list">
             <li>
@@ -130,13 +130,14 @@
             </li>
         </ul>                    
     </section>
+    </main>
 
 
     <!-- footer -->
    <footer class="footer">
       <a class="link logo" href="./index.html" lang="en">Web<span class="logo-footer">Studio</span></a>
       <address>
-        <ul class="list">
+        <ul class="list addres-list">
           <li>
             <a class="street-address link"
               href="https://goo.gl/maps/wQYxwLy2fmPHbs7g9"
